--- a/myportfo.css
+++ b/myportfo.css
@@ -1,96 +1,126 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
-body{
+
+body {
     background: #080808;
 }
-.container{
-        padding: 10px 10%;
+
+.container {
+    padding: 10px 10%;
 }
-nav{
+
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.logo{
+
+.logo {
     width: 140px;
 }
-nav ul li{
+
+nav ul li {
     display: inline-block;
     list-style: none;
     margin: 10px 20px;
 }
-nav ul li a{
+
+nav ul li a {
     color: white;
     text-decoration: none;
     font-size: 18px;
     position: relative;
 
 }
-nav ul li a::after{
+
+#element {
+    color: rgb(149, 26, 149);
+    margin-bottom: 150px;
+}
+
+nav ul li a::after {
     content: '';
     width: 0;
-    height:3px;
-    background:  rgb(149, 26, 149);
+    height: 3px;
+    background: rgb(149, 26, 149);
     position: absolute;
     left: 0;
     bottom: -6px;
     transition: 0.5s;
 }
-nav ul li a:hover::after{
-    width: 100%; 
+
+nav ul li a:hover::after {
+    width: 100%;
 }
-.header-text{
+
+.header-text {
     color: aliceblue;
     margin-top: 15%;
     font-size: 30px;
 }
-.header-text h1{
+
+.header-text h1 {
     font-size: 60px;
     margin-top: 15px;
+    margin-bottom: 10px;
 }
-.header-text h1 span{
+
+.header-text h1 span {
 
     color: rgb(130, 12, 130);
 }
-#about{
+
+#about {
+   
     padding: 80px 0;
     color: #ababab;
 }
-.row{
+
+.row {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.about-col-1{
+
+.about-col-1 {
     flex-basis: 35%;
 
 }
-.about-col-1 img{
+
+.about-col-1 img {
     width: 100%;
     border-radius: 15px;
 }
-.about-col-2{
+
+.about-col-2 {
     flex-basis: 60%;
 
 }
-.nano{
+.about-col-2 p{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.nano {
     font-size: 40px;
     font-weight: 600;
     color: #fff;
 }
-.tab-title{
+
+.tab-title {
     display: flex;
     margin: 20px 0 40;
 }
-.tab-links{
+
+.tab-links {
     margin-top: 20px;
     margin-right: 50px;
     font-size: 20px;
@@ -98,93 +128,168 @@ nav ul li a:hover::after{
     cursor: pointer;
     position: relative;
 }
-.tab-links::after{
+
+.tab-links::after {
     content: '';
     width: 0;
-    height:3px;
-    background:  rgb(130, 12, 130);
+    height: 3px;
+    background: rgb(130, 12, 130);
     position: absolute;
     left: 0;
     bottom: -8px;
     transition: 0.5s;
 }
-.tab-links.active-link::after{
+
+.tab-links.active-link::after {
     width: 50%;
 
 }
-.tab-contents ul li{
+
+.tab-contents ul li {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     list-style: none;
     margin: 10px 0;
 }
-.tab-contents ul li span{
+
+.tab-contents ul li span {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: rgb(130, 12, 130);
     font-size: 14px;
 }
-.tab-contents{
+
+.tab-contents {
     display: none;
 }
-.tab-contents.active-tab{
+
+.tab-contents.active-tab {
     display: block;
 }
-.contact-left{
+
+#project {
+    width: 600px;
+    padding: 80px;
+    margin-bottom: 200px;
+    padding: 1rem;
+    border-radius: 2rem;
+    background-color: rgb(33, 33, 35);
+}
+
+.Section-title {
+    font-size: 50px;
+    color: #fff;
+    text-align: center;
+    padding-top: 120px;
+    margin: 40px 0px;
+}
+
+.Section-title span {
+    color: rgb(130, 12, 130);
+}
+
+.project_card {
+    color: #fff;
+    font-size: 20px;
+    padding: 1.5rem;
+    border-radius: 2rem;
+}
+
+.project_image {
+    display: block;
+    overflow: hidden;
+    border-radius: 1.5rem;
+    margin-bottom: 10px;
+}
+
+.project_detail {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #ababab;
+}
+
+.projects_skills {
+    color: #ababab;
+}
+
+.project_button {
+    text-decoration: none;
+    font-size: 18px;
+    color: #ababab;
+}
+
+.project_button:hover {
+    font-size: 19px;
+    color: #521a4a;
+}
+
+.contact-left {
     color: #fff;
     flex-basis: 30%;
 
 }
-.contact-right{
+
+.contact-right {
     color: #fff;
     flex-basis: 60%;
 }
-.contact-left p{
+
+.contact-left p {
     margin-right: 15px;
     margin-top: 30px;
 }
-.contact-left p i{
-    color:rgb(130, 12, 130);
-    margin-right:19px ;
+
+.contact-left p i {
+    color: rgb(130, 12, 130);
+    margin-right: 19px;
     font-size: 20px;
 }
-.social-icons{
+
+.social-icons {
     margin-top: 30px;
 }
-.social-icons a{
+
+.social-icons a {
     text-decoration: none;
     font-size: 30px;
     margin-right: 15px;
     color: #ababab;
     display: inline-block;
-    transition:transform 0.5s;
+    transition: transform 0.5s;
 }
-.social-icons a:hover{
+
+.social-icons a:hover {
     color: rgb(130, 12, 130);
     transform: translateY(-5px);
 
 }
-.btn{
+
+.btn {
     display: block;
     margin: 50px auto;
-    width: fit-content ;
-    border: 1px solid  rgb(130, 12, 130);
+    width: fit-content;
+    border: 1px solid rgb(130, 12, 130);
     padding: 14px 50px;
-    border-radius:6px; 
+    border-radius: 6px;
     text-decoration: none;
     color: white;
 }
 
-.btn.btn2{
+.btn.btn2 {
     font-size: 10px;
     display: inline-block;
-    background:  rgb(130, 12, 130) ;
+    background: rgb(130, 12, 130);
 }
-.btn.btn2:hover{
+
+.btn.btn2:hover {
     transform: translateY(-3px);
 
 }
-.contact-right form{
+
+.contact-right form {
     width: 100%;
 
 }
-form input,form textarea{
+
+form input,
+form textarea {
     width: 100%;
     border: 0;
     outline: none;
@@ -195,14 +300,16 @@ form input,form textarea{
     border-radius: 6px;
 
 }
-form .btn2{
+
+form .btn2 {
     padding: 14px 60px;
     font-size: 18px;
     margin-top: 20px;
     cursor: pointer;
 
 }
-.copyright{
+
+.copyright {
     width: 100%;
     text-align: center;
     padding: 25px 0;
@@ -210,63 +317,78 @@ form .btn2{
     font-weight: 300;
     margin-top: 20px;
 }
-.copyright i{
-    color:  rgb(130, 12, 130) ;
-}
-nav i{
-   display:none;
- 
-}
-@media only screen and (max-width:700px){
 
-    .header-text{
+.copyright i {
+    color: rgb(130, 12, 130);
+}
+
+nav i {
+    display: none;
+
+}
+
+@media only screen and (max-width:700px) {
+
+    .header-text {
         margin: 20%;
         font-size: 20px;
     }
-    .header-text h1{
+
+    .header-text h1 {
         font-size: 45px;
     }
-    nav i{
-        display:block;
+
+    nav i {
+        display: block;
         font-size: 25px;
         color: #fff;
-     }
-     nav ul{
-        background:  rgb(130, 12, 130);
-        position: fixed ;
+    }
+
+    nav ul {
+        background: rgb(130, 12, 130);
+        position: fixed;
         top: 0;
         right: -200px;
         width: 200px;
         height: 100vh;
-        padding-top:50px ;
+        padding-top: 50px;
         z-index: 2;
-     }
-     nav ul li{
+    }
+
+    nav ul li {
         display: block;
         margin: 25px;
-     }
-     nav ul i{
+    }
+
+    nav ul i {
         position: absolute;
         top: 25px;
         left: 25px;
         cursor: pointer;
-     }
-     .about-col-1, .about-col-2{
+    }
+
+    .about-col-1,
+    .about-col-2 {
         flex-basis: 100%;
-     }
-     .about-col-1{
-        margin-bottom:30px ;
-     }
-     .tab-links{
+    }
+
+    .about-col-1 {
+        margin-bottom: 30px;
+    }
+
+    .tab-links {
         margin-right: 54px;
-        
-     }
-     .contact-left, .contact-right{
-            flex-basis: 100%;
-     }
-    
+
+    }
+
+    .contact-left,
+    .contact-right {
+        flex-basis: 100%;
+    }
+
 }
-#msg{
+
+#msg {
     color: #61b752;
     margin-top: -40px;
     display: block;
