--- a/myportfo.css
+++ b/myportfo.css
@@ -13,6 +13,77 @@ body {
     background: #000000;
 }
 
+.dark-mode {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+  }
+
+
+.checkbox {
+    display: none;
+  }
+  
+  .slider {
+    width: 60px;
+    height: 30px;
+    background-color: lightgray;
+    border-radius: 20px;
+    overflow: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border: 4px solid transparent;
+    -webkit-transition: .3s;
+    transition: .3s;
+    -webkit-box-shadow: 0 0 10px 0 rgb(0, 0, 0, 0.25) inset;
+            box-shadow: 0 0 10px 0 rgb(0, 0, 0, 0.25) inset;
+    cursor: pointer;
+  }
+  
+  .slider::before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    -webkit-transform: translateX(-30px);
+        -ms-transform: translateX(-30px);
+            transform: translateX(-30px);
+    border-radius: 20px;
+    -webkit-transition: .3s;
+    transition: .3s;
+    -webkit-box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.25);
+            box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.25);
+  }
+  
+  .checkbox:checked ~ .slider::before {
+    -webkit-transform: translateX(30px);
+        -ms-transform: translateX(30px);
+            transform: translateX(30px);
+    -webkit-box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.25);
+            box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.25);
+  }
+
+  
+
+  
+  .checkbox:checked ~ .slider {
+    background-color:rgb(123, 0, 123);
+  }
+  
+  .checkbox:active ~ .slider::before {
+    -webkit-transform: translate(0);
+        -ms-transform: translate(0);
+            transform: translate(0);
+  }
+
+
+
+
+
 .container {
     padding: 10px 10%;
 }
@@ -279,9 +350,16 @@ nav ul li a:hover::after {
 }
 
 .btn.btn2 {
+    border-radius: 2em;
     font-size: 10px;
     display: inline-block;
-    background: rgb(130, 12, 130);
+  
+
+    background: linear-gradient(
+        90deg,
+        rgb(118, 54, 208) 0%,
+        rgb(130, 12, 130) 100%
+      );
 }
 
 .btn.btn2:hover {
@@ -317,6 +395,7 @@ form .btn2 {
 }
 
 .copyright {
+    color: #c9c9c9;
     width: 100%;
     text-align: center;
     padding: 25px 0;
@@ -370,7 +449,7 @@ nav #sir{
         top: 0;
         right: -200px;
         width: 200px;
-        height: 100vh;
+        height: 80vh;
         padding-top: 50px;
         z-index: 2;
         transition: right 0.5s;
