--- a/myportfo.css
+++ b/myportfo.css
@@ -13,6 +13,8 @@ body {
     background: #000000;
 }
 
+/* //-----------------------------------------------------------------------------------------// */
+/* From Uiverse.io by Galahhad */ 
 .dark-mode {
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
@@ -81,10 +83,8 @@ body {
   }
 
 
-
-
-
 .container {
+    margin-top: 20px;
     padding: 10px 10%;
 }
 #element{
@@ -180,13 +180,24 @@ nav ul li a:hover::after {
 
 .about-col-2 {
     flex-basis: 60%;
-
 }
+
+
 .about-col-2 p{
+    margin-top: 10px;
+    font-size: 20px;
+    line-height: 1.5;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
+.sec2{
+    margin-top: 100px;
+}
+.class{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: rgb(130, 12, 130);
+}
 .sub-title {
+    
     font-size: 40px;
     font-weight: 600;
     color: #fff;
@@ -221,17 +232,30 @@ nav ul li a:hover::after {
     width: 50%;
 
 }
+.tab-contents{
+    margin-top: 10px;
+    font-size: 20px;
+    line-height: 1.5;
 
+}
 .tab-contents ul li {
+
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     list-style: none;
-    margin: 10px 0;
+    margin: 20px 0;
+    justify-content: space-between;
+    margin-top: 10px;
+    font-size: 20px;
+    line-height: 1.5;
 }
 
 .tab-contents ul li span {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: rgb(130, 12, 130);
-    font-size: 14px;
+ 
+    margin-top: 10px;
+    font-size: 20px;
+    line-height: 1.5;
 }
 
 .tab-contents {
@@ -283,6 +307,7 @@ nav ul li a:hover::after {
 }
 
 .projects_skills {
+    
     color: #ababab;
 }
 
@@ -449,7 +474,7 @@ nav #sir{
         top: 0;
         right: -200px;
         width: 200px;
-        height: 100vh;
+        height: 80vh;
         padding-top: 50px;
         z-index: 2;
         transition: right 0.5s;
